--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,39 @@ main {
 
 .tab {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.tabButtons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tabButton {
+  height: 200px;
+  width: 200px;
+  box-shadow: 0px 0px 0.5px 0.5px gray;
+}
+
+.tabButton:hover {
+  box-shadow: 0px 0px 2px 2px gray;
+}
+
+.tabButtonLink {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tabButtonImage {
+  width: 150px;
+  height: 150px;
 }
 
 #home {
